--- a/transaction-test/transaction-test-local-transaction-mybatis/src/main/resources/properties/jdbc.properties
+++ b/transaction-test/transaction-test-local-transaction-mybatis/src/main/resources/properties/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc\:mysql\://localhost\:3306/test?useUnicode\=true&amp;characterEncoding\=UTF-8
+jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&autoReconnect=true&serverTimezone=Asia/Shanghai&tinyInt1isBit=false
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=root
 jdbc.password=root
